# python-example

./: .gitignore  README.md  update.sh
.amazonq/rules/: review-rules.md
.github/: dependabot.yml
.github/workflows/: ci.yml  main.yml
mkpassword/: hello.py  pyproject.toml
numpy-matplotlib-example/: hello.py  pyproject.toml
numpy-pandas-example/: hello.py  pyproject.toml
pip-module-example/lib-module/: Pipfile  README.md  setup.cfg
pip-module-example/lib-module/src/example_lib/: __init__.py
