[metadata]
name = example_lib
version = 0.0.1
url = https://github.com/poad/python-example/blob/main/pip-module-example/lib-module
author = Kenji Saito
author_email = poad1010@gmail.com
license_file = LICENSE
description = example_lib: Example Python package
long_description = file: README.md

[options]
zip_safe = False
package_dir=
    =src
packages = find: 
include_package_data = True

[options.packages.find]
exclude =
    tests
where=src
